[package]
description = "Conflux Stratum lib"
homepage = "http://www.conflux-chain.io"
name = "cfx-stratum"
version = "1.12.0"
license = "GPL-3.0"
edition = "2018"

[dependencies]
cfx-types = { path = "../../cfx_types" }
keccak-hash = "0.3.0"
jsonrpc-core = "14.0.0"
jsonrpc-tcp-server = "14.0.0"
log = "0.4"
parking_lot = "0.10"

[dev-dependencies]
env_logger = "0.5"
tokio = "0.1"
tokio-io = "0.1"
