[package]
name = "cfx-packing-pool"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { path = "../../primitives"}
cfx-types = { path = "../../cfx_types" }
cfx-math = { path = "../../cfx_math" }
treap-map = {path = "../../util/treap-map" }
heap-map = {path = "../../util/heap-map" }
malloc_size_of = {path = "../../util/malloc_size_of"}
malloc_size_of_derive = {path = "../../util/malloc_size_of_derive"}
rand_xorshift = "0.3"
typenum = "1.17.0"
rand = "0.7"