[package]
description = "Conflux core statedb library"
homepage = "https://www.confluxnetwork.org"
license = "GPL-3.0"
name = "cfx-statedb"
version = "1.0.0"
edition = "2018"

[dependencies]
cfx-internal-common = { path = "../internal_common" }
cfx-parameters = { path = "../parameters" }
cfx-storage = { path = "../storage" }
cfx-types = { path = "../../cfx_types" }
error-chain = { version = "0.12", default-features = false }
hashbrown = "0.7.1"
log = "0.4"
parking_lot = "0.11"
primitives = { path = "../../primitives", optional = true }
rlp = "0.4.0"

[dev-dependencies]
primitives = { path = "../../primitives", features = ["test_no_account_length_check"] }

[features]
default = ["primitives"]
# Unfortunately cfg test attributes doesn't work across crates,
# we have to define a feature for test code.
# https://users.rust-lang.org/t/cfg-test-doesnt-propagate-to-external-crates/13046
testonly_code = []
