[package]
description = "Conflux core storage library"
homepage = "https://www.confluxnetwork.org"
license = "GPL-3.0"
name = "cfx-storage"
version = "1.0.0"
edition = "2018"

[dependencies]
cfg-if = "0.1"
cfx-bytes = { path = "../../cfx_bytes" }
cfx-internal-common = { path = "../internal_common" }
cfx-types = { path = "../../cfx_types" }
cfx-storage-primitives = { path = "../storage_primitives"}
delegate = "0.5.0"
derivative = "2.0.2"
error-chain = { version = "0.12", default-features = false }
fallible-iterator = "0.2"
fs_extra = "1.1.0"
futures = { version = "0.3.3", features = ["compat"] }
hashbrown = "0.7.1"
keccak-hash = "0.5"
kvdb = "0.4"
kvdb-rocksdb = {path="../../db/src/kvdb-rocksdb"}
lazy_static = "1.4"
log = "0.4"
log4rs = { version = "1.0.0", features = ["background_rotation", "gzip"] }
malloc_size_of = {path = "../../util/malloc_size_of"}
malloc_size_of_derive = {path = "../../util/malloc_size_of_derive"}
memoffset = "0.5.1"
parking_lot = "0.11"
primitives = { path = "../../primitives", optional = true }
rand = "0.7"
rand_chacha="0.2.1"
random-crash = { path = "../../util/random_crash" }
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
rustc-hex = "2.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
sqlite = "0.25"
sqlite3-sys = "0.12"
strfmt = "0.1"
tokio = { version = "0.2", features = ["full"] }
backtrace = "0.3"

lvmt-db = { git = "https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c", optional = true, features = ["large_lvmt"] }
parity-journaldb = { git = "https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c", optional = true  }
blake2-hasher = { git = "https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c", optional = true }
trie-db= {version="0.11.0", optional = true}
keccak-hasher = { git="https://github.com/openethereum/openethereum.git", rev="2ae2949", optional=true }
patricia-trie-ethereum = { git="https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c", optional=true }
rainblock-trie = { git = "https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c", optional = true}

metrics = {path="../../util/metrics"}
profile = {path="../../util/profile"}

[dev-dependencies]
primitives = { path = "../../primitives", features = ["test_no_account_length_check"] }

[dependencies.parity-util-mem]
version = "0.5"
default-features = false

[features]
default = ["primitives"]
# Unfortunately cfg test attributes doesn't work across crates,
# we have to define a feature for test code.
# https://users.rust-lang.org/t/cfg-test-doesnt-propagate-to-external-crates/13046
testonly_code = []
storage-dev = ["profile/timer-metrics"]
lvmt-storage = ["storage-dev","lvmt-db"]
mpt-storage = ["storage-dev", "parity-journaldb", "trie-db", "keccak-hasher","patricia-trie-ethereum"]
raw-storage = ["storage-dev"]
rain-storage = ["storage-dev", "rainblock-trie", "parity-journaldb", "patricia-trie-ethereum", "trie-db"]
light-hash = ["blake2-hasher", "parity-journaldb/light-hash"]