[package]
name = "cfx-storage-primitives"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
cfx-bytes = { path = "../../cfx_bytes" }
cfx-types = { path = "../../cfx_types" }
cfx-primitives = { package="primitives", path = "../../primitives"}
keccak-hash = "0.5"
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
rustc-hex = "2.1"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
lvmt-db = { git = "https://github.com/ChenxingLi/authenticated-storage-benchmarks.git", rev = "858f92c" }
log = "0.4"
backtrace = "0.3"

[dev-dependencies]
serde_json = "1.0"

[features]
lvmt-storage= []
mpt-storage= []
raw-storage= []
rain-storage= []